Embedded_C/Lesson_1/Toogle_led/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:47:02 **** Build of configuration Debug for project Toogle_Lab_1 ****
make -j16 all 
arm-none-eabi-gcc -mcpu=cortex-m3 -g3 -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f103c6tx.d" -MT"Startup/startup_stm32f103c6tx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f103c6tx.o" "../Startup/startup_stm32f103c6tx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
arm-none-eabi-gcc -o "Toogle_Lab_1.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\ibrah\STM32CubeIDE\workspace_1.4.0\embedded_c_1\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Toogle_Lab_1.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Toogle_Lab_1.elf
 
arm-none-eabi-size   Toogle_Lab_1.elf 
arm-none-eabi-objdump -h -S  Toogle_Lab_1.elf  > "Toogle_Lab_1.list"
arm-none-eabi-objcopy  -O binary  Toogle_Lab_1.elf  "Toogle_Lab_1.bin"
   text	   data	    bss	    dec	    hex	filename
    672	      8	   1568	   2248	    8c8	Toogle_Lab_1.elf
Finished building: default.size.stdout
 
Finished building: Toogle_Lab_1.bin
Finished building: Toogle_Lab_1.list
 
 
01:39:03 **** Incremental Build of configuration Debug for project Toogle_Lab_1 ****
make -j16 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c:44:26: error: initializer element is not constant
 volatile R_ODR_T* R_ODR= (volatile R_ODR_T*)(GPIOA_ODR +0x0c);
                          ^
make: *** [Src/subdir.mk:24: Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
01:39:44 **** Incremental Build of configuration Debug for project Toogle_Lab_1 ****
make -j16 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c:44:27: error: initializer element is not constant
 volatile R_ODR_T * R_ODR= (volatile R_ODR_T*)(GPIOA_ODR +0x0c);
                           ^
make: *** [Src/subdir.mk:24: Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
01:43:24 **** Incremental Build of configuration Debug for project Toogle_Lab_1 ****
make -j16 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c:44:47: error: 'GPIOA_BASE' undeclared here (not in a function); did you mean 'GPIOA_CRH'?
 volatile R_ODR_T * R_ODR= (volatile R_ODR_T*)(GPIOA_BASE +0x0c);
                                               ^~~~~~~~~~
                                               GPIOA_CRH
make: *** [Src/subdir.mk:24: Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
01:45:06 **** Incremental Build of configuration Debug for project Toogle_Lab_1 ****
make -j16 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "Toogle_Lab_1.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\ibrah\STM32CubeIDE\workspace_1.4.0\embedded_c_1\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Toogle_Lab_1.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Toogle_Lab_1.elf
 
arm-none-eabi-objdump -h -S  Toogle_Lab_1.elf  > "Toogle_Lab_1.list"
arm-none-eabi-objcopy  -O binary  Toogle_Lab_1.elf  "Toogle_Lab_1.bin"
arm-none-eabi-size   Toogle_Lab_1.elf 
   text	   data	    bss	    dec	    hex	filename
    672	     12	   1564	   2248	    8c8	Toogle_Lab_1.elf
Finished building: default.size.stdout
 
Finished building: Toogle_Lab_1.bin
Finished building: Toogle_Lab_1.list
 
 
01:45:33 **** Incremental Build of configuration Debug for project Toogle_Lab_1 ****
make -j16 all 
arm-none-eabi-size   Toogle_Lab_1.elf 
   text	   data	    bss	    dec	    hex	filename
    672	     12	   1564	   2248	    8c8	Toogle_Lab_1.elf
Finished building: default.size.stdout
 
